# slithyt

./: .gitignore  274s.md  2jrp.md  AGENTS.md  GEMINI.md  README.md  pyproject.toml
.agent-bin/: config.json  gh  git
.github/: copilot-instructions.md
.github/instructions/: backend-python.instructions.md  docs.instructions.md  infra.instructions.md
.github/workflows/: ci.yml  release.yml
scripts/: build_phonetic_model.py  build_transcription_model.py  export_cmu_words.py  notes.txt  purify_corpus.py  release.py
src/slithyt/: __init__.py  __main__.py  build.py  cli.py  generator.py  rhyme.py  sentiment.py  update.py  utils.py  validator.py
src/slithyt/data/: ancient-egyptian-names.txt  astronomy-names.txt  cars.txt  drug-names.txt  greek-female-names.txt  greek-male-names.txt  harry-potter-names.txt  hebrew-personal-names.txt  hebrew-place-names.txt  latin-female-names.txt  latin-male-names.txt  latin-taxonomy-words.txt  non-generic-drugs.txt  star-wars-names.txt
tests/: test_generator.py  test_update.py  test_validator.py
