[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slithyt"
version = "0.2.0"
authors = [
  { name="Daniel Hardman", email="daniel.hardman@gmail.com" },
]
description = "A tool for generating novel, pronounceable words based on linguistic corpuses."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pronouncing",
    "vaderSentiment-pypi",
]

[project.scripts]
slithyt = "slithyt.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
