[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slithyt"
version = "1.0.0"
authors = [
  { name = "Daniel Hardman", email = "daniel.hardman@gmail.com" },
]
description = "A tool for generating novel, pronounceable words based on linguistic corpuses."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
    "Development Status :: 4 - Beta",
]
keywords = ["word generation", "procedural generation", "nlp", "linguistics", "naming"]
dependencies = [
    "pronouncing",
    "vaderSentiment",
]

[project.urls]
Homepage = "https://github.com/dhh1128/slithyt"
"Bug Tracker" = "https://github.com/dhh1128/slithyt/issues"

[project.scripts]
slithyt = "slithyt.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
slithyt = ["data/*.txt", "data/*.txt.gz", "data/*.gz"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
